syntax = "proto3";

option go_package = "./pb";

package pb;

//req „ÄÅresp
message InputReq {
  string username = 1;
  string domain =2;
  string content = 3;
  string time=4;
}
message InputResp {

}

message SearchReq {
  string username = 1;
}
message SearchResp {
  repeated InputReq data = 1;
}

//service
service input {
  rpc input(InputReq) returns(InputResp);
  rpc search(SearchReq) returns(SearchResp);
}